src/app/app-features/product-details/_ProductDetails.scss
@import '../../../styles/constants.scss';

//Image Component
.big-image {
  object-fit: cover;
  border-radius: 16px;
}

.small-img-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 342px;
  margin-top: 13px;
}

.small-img {
  width: 48px;
  height: 48px;
  object-fit: cover;
  margin-right: 9px;
  margin-bottom: 10px;
  border-radius: 8px;
  cursor: pointer;
  opacity: 0.7;
}

.small-img-active {
  opacity: 1;
  transform: scale(1.04);
  transition: scale 0.3s;
}

.product-details-container {
  margin-top: 32px;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.product-details-flex {
  display: flex;
  justify-content: space-between;
}

.product-details-slideshow {
  margin-right: 192px;
}

.product-details-title {
  font-family: $medium;
  font-size: 38px;
  text-align: left;
  margin: 0;
}

.product-details-info {
  display: flex;
  justify-content: space-between;
  margin: 16px 0;
}

.product-details-in-stock {
  font-family: $bold;
  font-size: 14px;
  color: $green;
}

.product-details-not-in-stock {
  font-family: $bold;
  font-size: 14px;
  color: $red;
}

.product-details-serial-nb {
  text-transform: uppercase;
  font-family: $regular;
  font-size: 14px;
  color: #acb5bd;
}

.product-details-text {
  font-family: $regular;
  font-size: 16px;
  color: $black;
  margin-bottom: 14px;
}

.product-details-detalii {
  font-family: $regular;
  font-size: 14px;
  color: $primaryColor;
  text-decoration: underline;
}

.product-details-cart-price {
  display: flex;
  justify-content: space-between;
  align-items: flex-end !important;
  margin: 32px 0;
}

.product-details-price {
  color: $black;
  font-family: $bold;
  font-size: 48px;
  line-height: 48px;
  margin: 0;
}

.product-details-add-to-cart {
  @extend %flex-row;
  width: 208px;
  height: 38px;
  border-radius: 8px;
  background: $primaryColor;
  cursor: pointer;

  svg {
    width: 16px;
    height: 16px;
  }
}

.product-qty-input {
  width: 25px;
  background-color: $background;
  display: flex;
  justify-content: center;
  align-items: center;
}

.product-qty-input:focus {
  outline: none;
}

.product-details-content {
  width: 627px;
  height: 100%;
}

.product-details-add-to-cart-flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

.product-details-favorites {
  margin: 0 16px;
}

.product-details-add-text {
  margin-left: 16px;
  font-family: $bold;
  font-size: 18px;
  color: $white;
}

.product-details-counter {
  width: 96px;
  height: 38px;
  border-radius: 8px;
  border: 1px solid #dddddd;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: $regular;
  font-size: 18px;
}

.product-details-center-counter {
  @extend %flex-row;
  background: $lightGrey;
  border-left: 1px solid #dddddd;
  border-right: 1px solid #dddddd;
  flex: 1.5;
  height: 100%;
}

.product-details-counters {
  @extend %flex-row;
  flex: 1;
  height: 100%;
  cursor: pointer;
}

.product-details-questions {
  display: flex;
  font-family: $bold;
  font-size: 12px;
  justify-content: flex-end;
  a {
    text-decoration: underline;
    cursor: pointer;
    color: $primaryColor;
  }
}

//Characteristics Tables
.characteristics-tables {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: 80px 0 62px;
}

.characteristics-table {
  font-family: $bold;
  background: $white;
  border-radius: 16px;
  width: 1152px;
  height: 100%;
  box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1);
  transition: box-shadow 350ms ease;
  &:hover {
    box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.2);
  }

  .table {
    border-collapse: collapse;
    text-align: left;
    width: 100%;
  }

  .table-head th {
    font-size: 18px;
    padding: 12px 0 12px 16px;
  }

  thead tr th {
    font-size: 18px;
  }

  tbody tr {
    display: flex;
    align-items: center;
  }

  tbody tr th,
  tbody tr td {
    flex: 1;
  }

  tbody tr th {
    padding: 16px !important;
    font-size: 14px;
  }

  tbody tr td {
    font-family: $regular;
    border-collapse: collapse;
  }

  .table tbody tr:nth-child(odd) {
    background: $lightGrey;
  }

  .table tbody tr:last-child {
    border-bottom-left-radius: 16px;
    border-bottom-right-radius: 16px;
  }
}

.product-details-title {
  display: block;
}

.product-details-title-responsive {
  display: none;
  font-family: $medium;
  font-size: 24px;
  text-align: left;
  margin: 0;
}

.product-details-add-to-cart-mobile {
  display: flex;
  justify-content: center;
  align-items: center;
  display: none;
}

.mobile-image-component {
  display: none;
}

.mobile-small-img-component {
  display: none;
}

.recommended-products-container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 50px 0 84px;
}

.recommended-slider {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(100, 1fr);
  overflow: hidden;
  background: none;
  justify-items: center;
}

.recommended-slide {
  transition: 0.7s;
  height: auto;
  width: 265px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 10px 0 10px 0;
}

.arrows-recommended-slider {
  svg {
    width: 10px !important;
  }
}

.arr-right {
  padding: 0 16px 0 0 !important;
  width: 18px !important;
}

.arr-left {
  padding: 0 16px 0 0 !important;
}
/* ... */

